写好了路由跳转和构建好了项目木的目录结构

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "luckygirls",
+  "name": "医院消毒供应系统",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "2014874236 <2066895536@qq.com>",
+  "description": "软件工程作业",
+  "author": "邓曲英 <godblessu.milk@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
